Java Collections: add Demo/Test files + 45 more exercises
Demo/Test files added:
- 02-list/03-vector, 04-stack, 05-copy-on-write
- 06-enumeration
- 08-comparable-comparator/comparable, comparator, sorting
- 09-fail-fast-vs-fail-safe
- 11-collections-utilities

9 new exercise files (45 exercises total):
- ArrayList, LinkedList, Vector/Stack
- Set, Map, Queue
- Iterator, Comparable/Comparator
- Stream operations

Each exercise has 5 TODO problems with clear instructions